<resources>
    <string name="app_name">FateChanger</string>
    <string name="back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_you_can_help_description">As a student, fight to protect the ocean or stop climate change by deeply engaging your government. We’ll show you how. As a teacher, we have rich and expanding resources. As a parent or individual, you can empower the kids.</string>
    <string name="learn_write_share">Write, Share, Engage</string>
    <string name="how_you_can_help">How You Can Help</string>
    <string name="start">START</string>
    <string name="welcome_to_fate_changer">Welcome To FateChanger</string>
    <string name="children_saving_the_ocean">A Tool with Teeth</string>
    <string name="welcome_to_fate_changer_description">This app was designed with a single purpose: to give youth a powerful voice to protect our world’s environment. It is no ordinary app.</string>
    <string name="are_you_ready">Are you ready?</string>
    <string name="empty"></string>
    <string name="stay_engaged">Engage</string>
    <string name="stay_connected_for_updates">Stay Connected for Updates.</string>
    <string name="stay_engaged_description">Visit the app often to track our progress and get Action Alerts. Watch a growing army of determined kids change the world.</string>
    <string name="how_you_can_help_capitalized">HOW YOU CAN HELP</string>
    <string name="i_am_a_student">I am a Student</string>
    <string name="i_am_a_student_description">Get started on a letter-writing campaign, we\'ll show you how!</string>
    <string name="i_am_a_teacher">I am a Teacher</string>
    <string name="i_am_a_teacher_description">We have lots of learning material available to help you engage your students.</string>
    <string name="neither_student_nor_teacher">Neither a Student nor Teacher?</string>
    <string name="neither_student_nor_teacher_description">We need your support and donations. Learn how you can engage with Fatechanger.</string>
    <string name="Unable_To_Play_Youtube_Video">Error! Unable to play youtube video!</string>
    <string name="students">Students</string>
    <string name="teachers">Teachers</string>
    <string name="others">Others</string>
    <string name="donate_today">Donate Today</string>
    <string name="donation_description">Donations are tax-deductible and 100% of proceeds go to support saving the ocean.</string>
    <string name="donate_now">Donate Now</string>
    <string name="for_students">For Students</string>
    <string name="sample_letters">Sample Letters</string>
    <string name="sample_letters_description">Here are some examples of letters that students have written.</string>
    <string name="country_contacts">Country Contacts</string>
    <string name="country_contacts_description">Look up who is the best person to write to in your country.</string>
    <string name="teaching_9_to_12">Teaching Materials\n Ages 9 - 12</string>
    <string name="teaching_13_to_15">Teaching Materials\n Ages 13 - 15</string>
    <string name="teaching_16_to_18">Teaching Materials\n Ages 16 - 18</string>
    <string name="for_student">For Student</string>
    <string name="for_teacher">For Teacher</string>
    <string name="updates">UPDATES</string>
    <string name="light_it_up">LIGHT IT UP</string>
    <string name="your_activist_dashboard">Your Activist Dashboard</string>
    <string name="letter_writing_update">Letter Writing Campaign</string>
    <string name="see_our_progress">See our progress</string>
    <string name="interview">INTERVIEW</string>
    <string name="peder_hill">Peder Hill</string>
    <string name="q_and_a_with_founder"><![CDATA[Q&A with the founder]]></string>
    <string name="high_scores">High Scores</string>
    <string name="see_where_your_country_ranks">See where your country ranks</string>
    <string name="empty_string"></string>
    <string name="write_and_get_the_world_out">Write And Get The World Out</string>
    <string name="select_your_country">Select Your Country</string>
    <string name="who_do_I_write_a_letter_to">Who do I write a letter to?</string>
    <string name="to_tell_my_government_how_I_feel">To tell my government how I feel</string>
    <string name="submit">Submit</string>
    <string name="write_a_letter_and_spread_the_word">Write a letter and spread the word.</string>
    <string name="write_a_letter_desctiprion">Write your letter. Stamp, mail it, and enter it in the tracker through the map. And invite friends and family to join this very, very real battle. We can raise an army.</string>
    <string name="write_to_where">Write to where?</string>
    <string name="write_about_what">Write about what?</string>
    <string name="golden_rules_text">1) Only if your parents say it’s okay\n2) Only if it’s legal in your country\n3) Always and only peacefully\n4) Communicate a clear message and demands\n5) Use personal stories to get your message across\n6) Make signs, borrow a bullhorn\n7) 3 weeks before: notify other schools, environmental groups and kidssaveocean.com\n8) 3 days before: notify the press and remind others\n 9) If there’s any trouble, leave immediately\n10) Stand up for what you believe in. Though you may be shy, have steel determination</string>
    <string name="activist_toolkit">Activist toolkit</string>
    <string name="golden_rules_of_protesting">Golden Rules of Protesting</string>
    <string name="golden_rules">Golden rules</string>
    <string name="nobodys_listening_text">Grownups have trouble changing. If you deeply feel the world must change faster to save the ocean and its creatures, multiply your activist impact by protesting.</string>
    <string name="nobodys_listening_subtitle">March, Sit-in, Demonstrate!</string>
    <string name="nobodys_listening_title">Feel Nobody’s Listening?</string>
    <string name="research_task_description">TASK: Research plastic &amp; climate emergencies</string>
    <string name="write_letter_task_description">TASK: Write your government a letter about plastic</string>
    <string name="write_letter_task_climate">TASK: Write your government a letter about climate</string>
    <string name="sharing_task_description">TASK: Spread Fatechanger by sharing</string>
    <string name="letter_campaing_task_description">TASK: Start a letter writing campaign</string>
    <string name="government_task_description">TASK: Help create new environmental laws</string>
    <string name="protest_task_description">TASK: Take part in or organize a protest</string>
    <string name="activist_campaign_text">Start a letter-writing campaign with help from your classmates and teacher to fight plastic and climate emergencies. How many letters can your school write?</string>
    <string name="activist_campaign_subtitle">Be a leader. Cause a wave.</string>
    <string name="activist_campaign_title">Start an Activist Campaign</string>
    <string name="engage_local_government_text">Local governments are usually very open to policy input from youth - especially when it’s well thought out, based on successful programs of other governments, and provides good publicity. If your government won’t engage in dialogue, grab a different tool: consider protesting.</string>
    <string name="policy_toolkit_text">Policy toolkit</string>
    <string name="engage_local_government_subtitle">Help your city or county develop policy</string>
    <string name="engage_local_government_title">Engage local government</string>
    <string name="tools_with_teeth">Tools with teeth</string>
    <string name="I_did_it">I did it!</string>
    <string name="Not_yet">Not yet</string>
    <string name="I_plan_to">I plan to!</string>
    <string name="I_did_it_about_plastic">I did it about plastic!</string>
    <string name="I_did_it_about_climate">I did it about climate!</string>
    <string name="env_policy_description">I plan to join the environmental policy hijack!</string>
    <string name="enter_your_letter">Enter Your Letter</string>
    <string name="letter_tracker">Letter Tracker</string>
    <string name="enter_a_letter_in_the_tracker">Enter a Letter in the Tracker</string>
    <string name="written_a_letter_stamped_and_mailed_it_off_you_re_awesome_you_ve_got_fire_in_your_belly_and_stood_up_to_change_fate">Written a letter, stamped, and mailed it off? You’re awesome. You’ve got fire in your belly and stood up to change fate.</string>
    <string name="select_the_country_you_wrote_to">Select the country you wrote to:</string>
    <string name="click_submit_only_after_you_ve_mailed_it">Click Submit only after you’ve mailed it.</string>
    <string name="enter_letter_dialog_question">Are you certain you\'ve stamped and mailed it?</string>
    <string name="enter_letter_positive_answer">Yes, I\'ve already mailed it!</string>
    <string name="enter_letter_negative_answer">No, not yet</string>
    <string name="youre_letter_has_been_recorded">You\’re Letter Has Been Recorded</string>
    <string name="enter_letter_congratulations_title">Congratulations! You\’re one of us now. A Fatechanger</string>
    <string name="fatechangers_click_here">Fatechangers click here</string>
    <string name="policy_home_title">Create New Environmental Policy!</string>
    <string name="policy_home_subtitle">Youth Citizen Initiative Hijack Headquarters</string>
    <string name="policy_vote_input">Input from environmental leaders</string>
    <string name="policy_vote_impact">IMPACT</string>
    <string name="policy_vote_difficulty">DIFFICULTY</string>
    <string name="policy_vote_impact_div_difficulty">IMPACT/DIFFICULTY</string>
    <string name="policy_vote_subtitle">Which environmental policy do you feel\nyouth should try to get passed?</string>
    <string name="policy_vote_summary_title">Summary of Policy</string>
    <string name="policy_vote_dialog_message">Are you sure you want to vote for this policy?</string>
    <string name="policy_vote_already">You have voted already</string>
    <string name="campaign_dialog_message">Are you sure this is your location? This is important.</string>
    <string name="vote">VOTE</string>
    <string name="yes">Yes!</string>
    <string name="no">No</string>
    <string name="live">LIVE!</string>
    <string name="update">Update</string>
    <string name="spread">Spread</string>
    <string name="more_info">More info</string>
    <string name="policy_control_center_title">Your Policy Control Center</string>
    <string name="policy_control_center_subtitle">Sign Up &amp; always Update</string>
    <string name="policy_control_center_lived">Always keep your planned and collected signatures updated below.</string>
    <string name="policy_planned_signatures">Planned signatures</string>
    <string name="policy_collected_signatures">Collected signatures</string>
    <string name="your_collected_signatures">Your collected signatures: </string>
    <string name="your_planned_signatures">Your planned signatures: </string>
    <string name="policy_chosen">Policy chosen: </string>
    <string name="policy_signature_required">Signatures required: </string>
    <string name="policy_deadline">Deadline: </string>
    <string name="total_collected_so_far">Total collected so far: </string>
    <string name="campaign_location">Campaign location: </string>
    <string name="policy_impact_title">Multiply your Impact!</string>
    <string name="first_paragraph">Collecting signatures yourself is brilliant. But let’s do a little math.</string>
    <string name="second_paragraph">You = Bunch of signatures</string>
    <string name="third_paragraph">Now, say you get your girl scout troop or surf buddies or class to collect them too.</string>
    <string name="fourth_paragraph">Bunch * 20-ish = Loads of signatures</string>
    <string name="fifth_paragraph">And ask them to multiply their impact…</string>
    <string name="sixth_paragraph">Loads * Multiplied = MONSTER IMPACT</string>
</resources>