<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/nobody_listen_buttons_height">

            <ImageView
                android:id="@+id/girls"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/girls_and_megafon" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/nobodys_listening_title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/nobodys_listening_subtitle"
                android:textColor="#4a81b6"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/nobodys_listening_text"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <Button
                android:id="@+id/golden_rules_button"
                style="@style/small_button_style"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginVertical="20dp"
                android:text="@string/golden_rules" />

            <Button
                android:id="@+id/activist_toolkit_button"
                style="@style/small_button_style"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginBottom="20dp"
                android:text="@string/activist_toolkit" />
        </LinearLayout>
    </ScrollView>
</layout>