<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_policy">

    <include
        android:id="@+id/view_back"
        layout="@layout/view_toolbar"/>

    <TextView
        android:id="@+id/tvPolicyImpactTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:textSize="24sp"
        android:textColor="#fffefc"
        android:letterSpacing="0.02"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/policy_impact_title" />

    <TextView
        android:id="@+id/tvFirstParagraph"
        app:layout_constraintTop_toBottomOf="@id/tvPolicyImpactTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="14dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/first_paragraph"/>

    <TextView
        android:id="@+id/tvSecondParagraph"
        app:layout_constraintTop_toBottomOf="@id/tvFirstParagraph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/second_paragraph"/>

    <TextView
        android:id="@+id/tvThirdParagraph"
        app:layout_constraintTop_toBottomOf="@id/tvSecondParagraph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/third_paragraph"/>

    <TextView
        android:id="@+id/tvFourthParagraph"
        app:layout_constraintTop_toBottomOf="@id/tvThirdParagraph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/fourth_paragraph"/>

    <TextView
        android:id="@+id/tvFifthParagraph"
        app:layout_constraintTop_toBottomOf="@id/tvFourthParagraph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/fifth_paragraph"/>

    <TextView
        android:id="@+id/tvSixthParagraph"
        app:layout_constraintTop_toBottomOf="@id/tvFifthParagraph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginTop="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/sixth_paragraph"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/ic_x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="196:212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>