<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".map.EnterLetterFragment">

    <ProgressBar
        android:layout_weight="1"
        android:id="@+id/progressBar_cyclic"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:minWidth="40dp"
        app:layout_constraintBottom_toBottomOf="@id/country_picker"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintLeft_toLeftOf="@id/country_picker"
        app:layout_constraintRight_toRightOf="@id/country_picker"
        app:layout_constraintTop_toTopOf="@id/country_picker"
        app:layout_constraintWidth_percent=".5"/>

    <TextView
        android:id="@+id/title"
        android:text="@string/letter_tracker"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/big_title"
        android:text="@string/enter_a_letter_in_the_tracker"
        android:textAlignment="center"
        android:textSize="26dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>
    <TextView
        android:id="@+id/description"
        android:text="@string/written_a_letter_stamped_and_mailed_it_off_you_re_awesome_you_ve_got_fire_in_your_belly_and_stood_up_to_change_fate"
        android:padding="20dp"
        android:textSize="16dp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/big_title"/>
    <TextView
        android:id="@+id/picker_description"
        android:text="@string/select_the_country_you_wrote_to"
        android:textSize="20dp"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/country_picker"/>
    <NumberPicker
        android:id="@+id/country_picker"
        android:visibility="invisible"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/submit_button_description"/>
    <TextView
        android:id="@+id/submit_button_description"
        android:text="@string/click_submit_only_after_you_ve_mailed_it"
        android:textSize="20dp"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/submit_button"/>
    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"
        style="@style/small_button_style"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>